sr param